Added Forked VM failed fix for Windows